[tool.poetry]
name = "email-agent"
version = "0.1.0"
description = ""
authors = ["Ghazi Hudeihed <ghazi@hudeihed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.12"
langgraph = "^0.6.6"
langchain-core = "^0.3.75"
langchain-openai = "^0.3.32"
langsmith = "^0.4.21"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
httpx = "^0.28.1"
tiktoken = "^0.11.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.11"
black = "^25.1.0"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
ipykernel = "^6.30.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
